--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,6 @@ jobs:
           file: ./Dockerfile  # Dockerfile 的路径
           push: true
           tags: |
-            dslz666/AutoUpdateJdCookie:${{ github.run_number }}
-            dslz666/AutoUpdateJdCookie:${{ github.sha }}
-            dslz666/AutoUpdateJdCookie:${{ inputs.tag }}
+            dslz666/autojdck:${{ github.run_number }}
+            dslz666/autojdck:${{ github.sha }}
+            dslz666/autojdck:${{ inputs.tag }}
