--- a/.github/workflows/dslz.yml
+++ b/.github/workflows/dslz.yml
@@ -13,26 +13,49 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+          - name: Set timezone to Asia/Shanghai
+        run: |
+          sudo timedatectl set-timezone Asia/Shanghai
+          date
+          
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
+
+      - name: Set timezone to Asia/Shanghai
+        run: |
+          sudo timedatectl set-timezone Asia/Shanghai
+          date
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "latest"
+        
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .  # Docker上下文路径，默认为当前目录
           file: ./Dockerfile  # Dockerfile 的路径
           push: true
           tags: |
-            dslz666/autojdck:${{ github.run_number }}
-            dslz666/autojdck:${{ github.sha }}
+         #  dslz666/autojdck:${{ github.run_number }}
+         #   dslz666/autojdck:${{ github.sha }}
             dslz666/autojdck:${{ inputs.tag }}
