--- a/.github/workflows/dslz.yml
+++ b/.github/workflows/dslz.yml
@@ -47,7 +47,7 @@ jobs:
           context: .  # Docker上下文路径，默认为当前目录
           file: ./Dockerfile  # Dockerfile 的路径
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/autojdc:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:latest
           
           
           
