--- a/.github/workflows/dslz.yml
+++ b/.github/workflows/dslz.yml
@@ -48,7 +48,8 @@ jobs:
           file: ./Dockerfile  # Dockerfile 的路径
           push: true
         # tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:latest
-          tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:${{ github.run_number }}-${{ github.run_id }}
+        # tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:${{ github.run_number }}-${{ github.run_id }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:$(date +'%Y%m%d-%H%M')
           
           
           
