--- a/.github/workflows/dslz.yml
+++ b/.github/workflows/dslz.yml
@@ -33,7 +33,10 @@ jobs:
         with:
           node-version: "latest"
 
-
+        # 定时时间，方便写入到镜像名称中
+      - name: Get current timestamp
+        run: |
+          echo "TAG_TIMESTAMP=$(date +'%Y%m%d-%H%M')" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -49,7 +52,7 @@ jobs:
           push: true
         # tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:latest
         # tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:${{ github.run_number }}-${{ github.run_id }}
-          tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:$(date +'%Y%m%d-%H%M')
+          tags: ${{ secrets.DOCKER_USERNAME }}/autojdck:${{ env.TAG_TIMESTAMP }}
           
           
           
