--- a/.github/workflows/dslz.yml
+++ b/.github/workflows/dslz.yml
@@ -36,7 +36,7 @@ jobs:
         # 定时时间，方便写入到镜像名称中
       - name: Get current timestamp
         run: |
-          echo "TAG_TIMESTAMP=$(date +'%Y%m%d-%H%M')" >> $GITHUB_ENV
+          echo "TAG_TIMESTAMP=$(date +'%Y%m%d_%H%M')" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
